--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1349,6 +1349,7 @@
      "iopub.status.idle": "2024-05-01T16:49:36.782530Z",
      "shell.execute_reply": "2024-05-01T16:49:36.781891Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015875,
      "end_time": "2024-05-01T16:49:36.784200",
@@ -1370,6 +1371,119 @@
     "            if inp in set_:\n",
     "                set_.remove(inp)\n",
     "        print(\"YES\" if not set_ else \"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "072053b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LC Medium: https://leetcode.com/problems/accounts-merge/submissions/1246973276/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8294a3f1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def accountsMerge(accounts: list[list[str]]) -> list[list[str]]:\n",
+    "    class DS:\n",
+    "        def __init__(self) -> None:\n",
+    "            self.parent: dict[str, str] = {}\n",
+    "            self.size: dict[str, int] = {}\n",
+    "\n",
+    "        def findUltimateParent(self, node: str) -> str:\n",
+    "            if node not in self.parent:\n",
+    "                self.parent[node] = node\n",
+    "                self.size[node] = 1\n",
+    "\n",
+    "            if self.parent[node] == node:\n",
+    "                return node\n",
+    "            else:\n",
+    "                self.parent[node] = self.findUltimateParent(self.parent[node])\n",
+    "                return self.parent[node]\n",
+    "\n",
+    "        def unionBySize(self, u: str, v: str) -> None:\n",
+    "            up, vp = self.findUltimateParent(u), self.findUltimateParent(v)\n",
+    "            ups, vps = self.size[up], self.size[vp]\n",
+    "            if up == vp:\n",
+    "                return\n",
+    "            if ups < vps:\n",
+    "                self.parent[up] = vp\n",
+    "                self.size[vp] += self.size[up]\n",
+    "            else:\n",
+    "                self.parent[vp] = up\n",
+    "                self.size[up] += self.size[vp]\n",
+    "\n",
+    "    ds = DS()\n",
+    "    emails: dict[str, str] = dict()\n",
+    "    for account in accounts:\n",
+    "        account = account + [account[-1]]\n",
+    "        name = account[0]\n",
+    "        for i in range(1, len(account) - 1):\n",
+    "            n1, n2 = account[i], account[i + 1]\n",
+    "            emails[n1] = emails[n2] = name\n",
+    "            ds.unionBySize(n1, n2)\n",
+    "\n",
+    "    groups: dict[str, list[str]] = dict()\n",
+    "    for email in emails:\n",
+    "        uemail = ds.findUltimateParent(email)\n",
+    "        group = groups.get(uemail, [emails[uemail]])\n",
+    "        group.append(email)\n",
+    "        groups[uemail] = group\n",
+    "\n",
+    "    result: list[list[str]] = []\n",
+    "    for group in groups.values():\n",
+    "        result.append([group[0], *sorted(group[1:])])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "accountsMerge([\n",
+    "    [\"John\",\"johnsmith@mail.com\",\"john_newyork@mail.com\"],\n",
+    "    [\"John\",\"johnsmith@mail.com\",\"john00@mail.com\"],\n",
+    "    [\"Mary\",\"mary@mail.com\"],\n",
+    "    [\"John\",\"johnnybravo@mail.com\"]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd8c2bbf",
+   "metadata": {},
+   "source": [
+    "Codeforces contest: 1968 (2nd May 2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c70919b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem: A\n",
+    "def QA_1968() -> None:\n",
+    "    T = int(input())\n",
+    "    results: list[int] = []\n",
+    "    for _ in range(T):\n",
+    "        x = int(input())\n",
+    "        result: tuple[int, int] = (-1, -1)\n",
+    "        for y in range(1, x):\n",
+    "            curr = math.gcd(y, x) + y\n",
+    "            if curr > result[1]:\n",
+    "                result = y, curr\n",
+    "\n",
+    "        results.append(result[0])\n",
+    "\n",
+    "    for res in results:\n",
+    "        print(res)"
    ]
   }
  ],
