--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -3580,6 +3580,7 @@
      "iopub.status.idle": "2024-05-01T16:49:42.698118Z",
      "shell.execute_reply": "2024-05-01T16:49:42.697501Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.033556,
      "end_time": "2024-05-01T16:49:42.699867",
@@ -3636,6 +3637,143 @@
     "assert makeConnected(4, [[0,1],[0,2],[1,2]]) == 1\n",
     "assert makeConnected(6, [[0,1],[0,2],[0,3],[1,2],[1,3]]) == 2\n",
     "assert makeConnected(6, [[0,1],[0,2],[0,3],[1,2]]) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8030c685",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/FMwpt_aQOGw?si=ql3wSSNQsQKjwyts\n",
+    "Accounts Merge: DSU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37b2281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accountsMerge(accounts: list[list[str]]) -> list[list[str]]:\n",
+    "    class DS:\n",
+    "        def __init__(self) -> None:\n",
+    "            self.size: dict[str, int] = {}\n",
+    "            self.parent: dict[str, str] = {}\n",
+    "\n",
+    "        def findUltimateParent(self, node: str) -> str:\n",
+    "            if node not in self.parent:\n",
+    "                self.parent[node] = node\n",
+    "                self.size[node] = 1\n",
+    "\n",
+    "            if self.parent[node] == node:\n",
+    "                return node\n",
+    "            else:\n",
+    "                self.parent[node] = self.findUltimateParent(self.parent[node])\n",
+    "                return self.parent[node]\n",
+    "\n",
+    "        def unionBySize(self, u: str, i: str) -> None:\n",
+    "            up, ip = self.findUltimateParent(u), self.findUltimateParent(i)\n",
+    "            ups, ips = self.size[up], self.size[ip]\n",
+    "            if up == ip:\n",
+    "                return\n",
+    "            elif ups <= ips:\n",
+    "                self.parent[up] = ip\n",
+    "                self.size[ip] += self.size[up]\n",
+    "            else:\n",
+    "                self.parent[ip] = up\n",
+    "                self.size[up] += self.size[ip]\n",
+    "\n",
+    "    ds = DS()\n",
+    "    emails: dict[str, str] = dict()\n",
+    "    for i in range(len(accounts)):\n",
+    "        name = accounts[i][0]\n",
+    "        for email in accounts[i][1:]:\n",
+    "            emails[email] = name\n",
+    "            ds.unionBySize(email, str(i))\n",
+    "\n",
+    "    result: list[list[str]] = [[] for _ in range(len(accounts))]\n",
+    "    for email in sorted(ds.parent.keys()):\n",
+    "        loc: int = int(ds.findUltimateParent(ds.parent[email]))\n",
+    "        if email in emails:\n",
+    "            if not result[loc]:\n",
+    "                result[loc].append(emails[email])\n",
+    "            result[loc].append(email)\n",
+    "\n",
+    "    return list(filter(lambda x: len(x), result))\n",
+    "\n",
+    "# Testing the solution\n",
+    "accountsMerge([\n",
+    "    [\"John\",\"johnsmith@mail.com\",\"john_newyork@mail.com\"],\n",
+    "    [\"John\",\"johnsmith@mail.com\",\"john00@mail.com\"],\n",
+    "    [\"Mary\",\"mary@mail.com\"],\n",
+    "    [\"John\",\"johnnybravo@mail.com\"]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f391b0",
+   "metadata": {},
+   "source": [
+    "Number of Islands - 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fbebc60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pprint\n",
+    "def numOfIslands(rows: int, cols : int, operators : list[list[int]]) -> list[int]:\n",
+    "    class DS:\n",
+    "        def __init__(self, M: int, N: int):\n",
+    "            self.M, self.N = M, N\n",
+    "            self.parents: list[list[tuple[int, int]]] = [[(-1, -1) for j in range(N)] for i in range(M)]\n",
+    "            self.size: list[list[int]] = [[0 for j in range(N)] for i in range(M)]\n",
+    "            self.islands = 0\n",
+    "\n",
+    "        def getUltimateParent(self, node: tuple[int, int]) -> tuple[int, int]:\n",
+    "            if self.parents[node[0]][node[1]] == node:\n",
+    "                return node\n",
+    "            else:\n",
+    "                self.parents[node[0]][node[1]] = self.getUltimateParent(self.parents[node[0]][node[1]])\n",
+    "                return self.parents[node[0]][node[1]]\n",
+    "\n",
+    "        def union(self, n1: tuple[int, int]) -> int:\n",
+    "            if self.size[n1[0]][n1[1]] == 0:\n",
+    "\n",
+    "                self.size[n1[0]][n1[1]] = 1\n",
+    "                self.parents[n1[0]][n1[1]] = (n1[0], n1[1])\n",
+    "                self.islands += 1\n",
+    "\n",
+    "                for x, y in [(-1, 0), (0, -1), (0, 1), (1, 0)]:\n",
+    "                    n2 = n1[0] + x, n1[1] + y\n",
+    "                    if 0 <= n2[0] < self.M and 0 <= n2[1] < self.N and self.size[n2[0]][n2[1]] > 0:\n",
+    "                        n1p, n2p = self.getUltimateParent(n1), self.getUltimateParent(n2)\n",
+    "                        n1s, n2s = self.parents[n1p[0]][n1p[1]], self.parents[n2p[0]][n2p[1]]\n",
+    "                        if n1p != n2p:\n",
+    "                            self.islands -= 1\n",
+    "                            if n1s < n2s:\n",
+    "                                self.parents[n1p[0]][n1p[1]] = n2p\n",
+    "                                self.size[n2p[0]][n2p[1]] += self.size[n1p[0]][n1p[1]]\n",
+    "                            else:\n",
+    "                                self.parents[n2p[0]][n2p[1]] = n1p\n",
+    "                                self.size[n1p[0]][n1p[1]] += self.size[n2p[0]][n2p[1]]\n",
+    "\n",
+    "            return self.islands\n",
+    "\n",
+    "    results: list[int] = []\n",
+    "    ds = DS(rows, cols)\n",
+    "    for op in operators:\n",
+    "        results.append(ds.union((op[0], op[1])))\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "numOfIslands(4, 5, [[1,1],[0,1],[3,3],[3,4],[1,2],[2,3],[1,3]])"
    ]
   }
  ],
