--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1523,6 +1523,7 @@
      "iopub.status.idle": "2024-05-02T16:08:12.800097Z",
      "shell.execute_reply": "2024-05-02T16:08:12.799466Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.017424,
      "end_time": "2024-05-02T16:08:12.801711",
@@ -1550,6 +1551,77 @@
     "\n",
     "    for res in results:\n",
     "        print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace60a0e",
+   "metadata": {},
+   "source": [
+    "LC Medium: Remove stones\n",
+    "https://leetcode.com/problems/most-stones-removed-with-same-row-or-column/submissions/1248384399/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113c1b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeStones(stones: list[list[int]]) -> int:\n",
+    "    \"\"\"Max stones that can be removed is (island_size - 1)\"\"\"\n",
+    "    class DS:\n",
+    "        def __init__(self) -> None:\n",
+    "            self.size: dict[str, int] = {}\n",
+    "            self.parents: dict[str, str] = {}\n",
+    "\n",
+    "        def findUltimateParent(self, node: str) -> str:\n",
+    "            if node not in self.parents:\n",
+    "                self.parents[node] = node\n",
+    "                self.size[node] = 1 if 'r' in node else 0\n",
+    "\n",
+    "            if self.parents[node] == node:\n",
+    "                return node\n",
+    "            else:\n",
+    "                self.parents[node] = self.findUltimateParent(self.parents[node])\n",
+    "                return self.parents[node]\n",
+    "\n",
+    "        def unionBySize(self, row: str, col: str):\n",
+    "            rp, cp = self.findUltimateParent(row), self.findUltimateParent(col)\n",
+    "            rps, cps = self.size[rp], self.size[cp]\n",
+    "            if rp == cp:\n",
+    "                return\n",
+    "            elif rps < cps:\n",
+    "                self.parents[rp] = cp\n",
+    "                self.size[cp] += self.size[rp]\n",
+    "            else:\n",
+    "                self.parents[cp] = rp\n",
+    "                self.size[rp] += self.size[cp]\n",
+    "\n",
+    "    ds = DS()\n",
+    "    for i, j in stones:\n",
+    "        row, col = f'r{i}', f'c{j}'\n",
+    "        ds.unionBySize(row, col)\n",
+    "\n",
+    "    # Reset the size, find unique parents\n",
+    "    ds.size.clear()\n",
+    "    parents: set[str] = set()\n",
+    "    for i, _ in stones:\n",
+    "        row = f'r{i}'\n",
+    "        up = ds.findUltimateParent(row)\n",
+    "        ds.size[up] = ds.size.get(up, 0) + 1\n",
+    "        parents.add(up)\n",
+    "\n",
+    "    total = 0\n",
+    "    for parent in parents:\n",
+    "        total += ds.size[parent] - 1\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert removeStones([[0,0],[0,2],[1,3],[3,1],[3,2],[4,3]]) == 4\n",
+    "assert removeStones([[0,0],[1,1],[2,2],[2,3],[2,4],[3,2]]) == 3"
    ]
   }
  ],
