--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -4092,6 +4092,7 @@
      "iopub.status.idle": "2024-05-03T16:50:23.813571Z",
      "shell.execute_reply": "2024-05-03T16:50:23.812799Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.037067,
      "end_time": "2024-05-03T16:50:23.815325",
@@ -4151,6 +4152,204 @@
     "# Testing the solution\n",
     "assert removeStones([[0,0],[0,2],[1,3],[3,1],[3,2],[4,3]]) == 4\n",
     "assert removeStones([[0,0],[1,1],[2,2],[2,3],[2,4],[3,2]]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8537e9d6",
+   "metadata": {},
+   "source": [
+    "Strongly connected components - Kosaraju's algorithm\n",
+    "Video Link: https://youtu.be/R6uoSjZ2imo?si=PtlPrrG1CvlcluyT\n",
+    "- Strongly connected components are only valid for directed graphs\n",
+    "- For every pair of vertices u, v: u -> v path exists and v -> u path exists as well.\n",
+    "- Logic\n",
+    "```\n",
+    "1. Sort all the nodes according to the finishing time with a DFS\n",
+    "2. Reverse the graphs\n",
+    "3. Do a DFS again.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "576136c6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stronglyConnectedComponents(V: int, edges: list[list[int]]) -> int:\n",
+    "    \"\"\"Time: O(V + E), Space: O(V)\"\"\"\n",
+    "\n",
+    "    def DFS(root: int, adjl: list[list[int]], order: list[int]):\n",
+    "        if root not in visited:\n",
+    "            visited.add(root)\n",
+    "            for next_ in adjl[root]:\n",
+    "                DFS(next_, adjl, order)\n",
+    "            order.append(root)\n",
+    "\n",
+    "    # Convert edges into an adjacency list. adj contains adj list, adjR contains the edges reversed\n",
+    "    adj: list[list[int]] = [[] for i in range(V)]\n",
+    "    adjR: list[list[int]] = [[] for i in range(V)]\n",
+    "    for n1, n2 in edges:\n",
+    "        adj[n1].append(n2)\n",
+    "        adjR[n2].append(n1)\n",
+    "\n",
+    "    # Sort according to the finish time (decreasing order)\n",
+    "    visited: set[int] = set()\n",
+    "    finished: list[int] = []\n",
+    "    for curr in range(V):\n",
+    "        DFS(curr, adj, finished)\n",
+    "\n",
+    "    # Reverse the edges and do a DFS again\n",
+    "    count = 0\n",
+    "    visited.clear()\n",
+    "    while finished:\n",
+    "        # Get the node that was finished last (in decreasing order of finish time)\n",
+    "        curr = finished.pop()\n",
+    "        if curr not in visited:\n",
+    "            components: list[int] = []\n",
+    "            DFS(curr, adjR, components)\n",
+    "            print(components)\n",
+    "            count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stronglyConnectedComponents(5, [[0,1], [1,2], [1,4], [2,3], [3,2], [4,0]]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aa4c909",
+   "metadata": {},
+   "source": [
+    "Bridges in a graph: https://youtu.be/qrAub5z8FeA?si=zzulovJecoRFTXu_\n",
+    "Bridges are those edges of a graph that when removed, splits the graph into two or more components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d92479",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def criticalConnections(N: int, connections: list[list[int]]) -> list[list[int]]:\n",
+    "    \"\"\"\n",
+    "    Insertion / visited Time: Time when a node is visited via DFS\n",
+    "    lowestTime: min visited time of all adj node's visited time BESIDES THE PARENT. Initially assigned to insertion / visited time since logically, the value must be lesser than or equal to insertion time of the node.\n",
+    "\n",
+    "    End of each node's BFS, we check if the edge under consideration is a bridge.\n",
+    "    We check this by comparing the node's insertion time with the next_ node's lowestTime. If the insertion time < next_ node's lowest time that edge is a bridge.\n",
+    "    This is because, if visitedTime[curr] >= lowestTime[next_] there is somehow a path to reach the previous node. If visitedTime[curr] < lowestTime[next_] then there is no path for next_ to reach curr or to a point before curr.\n",
+    "\n",
+    "    With lowestTime, we are storing the node with the lowest insertion order that we can visit.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    timer: int = 0\n",
+    "    visitedTime: list[int] = [0 for i in range(N)]\n",
+    "    lowestTime: list[int] = [0 for i in range(N)]\n",
+    "    visited: set[int] = set()\n",
+    "    bridges: list[list[int]] = []\n",
+    "\n",
+    "    # Create adj list out of the edges\n",
+    "    adj: list[list[int]] = [[] for i in range(N)]\n",
+    "    for n1, n2 in connections:\n",
+    "        adj[n1].append(n2)\n",
+    "        adj[n2].append(n1)\n",
+    "\n",
+    "    def DFS(curr: int, parent: int):\n",
+    "        nonlocal timer, visited, visitedTime, adj\n",
+    "        visited.add(curr)\n",
+    "        visitedTime[curr] = lowestTime[curr] = timer\n",
+    "        timer += 1\n",
+    "        for next_ in adj[curr]:\n",
+    "            if next_ != parent:\n",
+    "                if next_ not in visited:\n",
+    "                    DFS(next_, curr)\n",
+    "                    lowestTime[curr] = min(lowestTime[curr], lowestTime[next_])\n",
+    "                    # The main logic here - if there were no other paths to reach next_,\n",
+    "                    # minimum time to reach next_ is still greater than curr's visited time\n",
+    "                    if visitedTime[curr] < lowestTime[next_]:\n",
+    "                        bridges.append([curr, next_])\n",
+    "                else:\n",
+    "                    lowestTime[curr] = min(lowestTime[curr], lowestTime[next_])\n",
+    "\n",
+    "    DFS(0, -1)\n",
+    "    return bridges\n",
+    "\n",
+    "# Testing the solution\n",
+    "criticalConnections(4, [[0,1],[1,2],[2,0],[1,3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab42efa0",
+   "metadata": {},
+   "source": [
+    "Articulation points in a graph: https://youtu.be/j1QDfU21iZk?si=DvGHVCaj6mAMQSKl\n",
+    "Articulation points are any nodes on whose remove the graph breaks into multiple components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a1ec448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def articulationPoints(V: int, E: int, adjl: list[list[int]]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    insertionTime: Store time of the node during DFS\n",
+    "    lowestTime: min insertionTime of all adjacent nodes, except for the parent and visited nodes\n",
+    "\n",
+    "    Time: O(V + E), Space: O(V)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    timer: int = 0\n",
+    "    visited: set[int] = set()\n",
+    "    insertionTime: list[int] = [0 for i in range(V + 1)]\n",
+    "    lowestTime: list[int] = [0 for i in range(V + 1)]\n",
+    "    artPoints: set[int] = set() # We store it in a set because the same node can be marked as articulation pt multiples times during the DFS\n",
+    "\n",
+    "    def DFS(curr: int, parent: int):\n",
+    "        nonlocal timer, visited, insertionTime, lowestTime, artPoints\n",
+    "        visited.add(curr)\n",
+    "        insertionTime[curr] = lowestTime[curr] = timer\n",
+    "        timer += 1\n",
+    "        child: int = 0\n",
+    "        for next_ in adjl[curr]:\n",
+    "            if next_ == parent:\n",
+    "                continue\n",
+    "            elif next_ not in visited:\n",
+    "                child += 1\n",
+    "                DFS(next_, curr)\n",
+    "                lowestTime[curr] = min(lowestTime[curr], lowestTime[next_])\n",
+    "                if insertionTime[curr] <= lowestTime[next_] and parent != -1:\n",
+    "                    artPoints.add(curr)\n",
+    "            else: # If visited, we take the time of insertion not the lowestTime unlike tarjan's algorithm (bridge detection)\n",
+    "                lowestTime[curr] = min(lowestTime[curr], insertionTime[next_])\n",
+    "\n",
+    "        # The formula: insertionTime[curr] <= lowestTime[next_] doesn't work for node with parent = -1. \n",
+    "        # For these nodes, we need to check how many child it has. If it has more than 1 then it is an articulation pt, \n",
+    "        # spliting which we get multiple components.\n",
+    "        if child > 1 and parent == -1:\n",
+    "            artPoints.add(curr)\n",
+    "\n",
+    "    for node in range(V):\n",
+    "        if node not in visited:\n",
+    "            DFS(node, -1)\n",
+    "\n",
+    "    return list(artPoints) if artPoints else [-1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "articulationPoints(8, 15, [[],[7,5,8],[7,4,6,8],[6,7,5],[2,8,7,5],[1,6,4,3],[5,8,3,2],[1,2,3,4],[1,6,4,2]])\n",
+    "articulationPoints(4, 4, [[],[2,3],[1,3],[1,2,4],[3]])"
    ]
   }
  ],
