--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1582,6 +1582,7 @@
      "iopub.status.idle": "2024-05-03T16:50:16.913343Z",
      "shell.execute_reply": "2024-05-03T16:50:16.912657Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.024821,
      "end_time": "2024-05-03T16:50:16.915033",
@@ -1646,6 +1647,113 @@
     "# Testing the solution\n",
     "assert removeStones([[0,0],[0,2],[1,3],[3,1],[3,2],[4,3]]) == 4\n",
     "assert removeStones([[0,0],[1,1],[2,2],[2,3],[2,4],[3,2]]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "400ce8db",
+   "metadata": {},
+   "source": [
+    "LC Weekly: 5th May 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b4258a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 Easy\n",
+    "def isValid(word: str) -> bool:\n",
+    "    wordSet: set[str] = set(word)\n",
+    "    if len(word) < 3:\n",
+    "        return False\n",
+    "    elif '@' in wordSet or '#' in wordSet or '$' in wordSet:\n",
+    "        return False\n",
+    "    else:\n",
+    "        vowelCheck = False\n",
+    "        for vowel in 'aeiou':\n",
+    "            if vowel in wordSet or vowel.upper() in wordSet:\n",
+    "                vowelCheck = True\n",
+    "                break\n",
+    "\n",
+    "        consCheck = False\n",
+    "        for consonant in 'bcdfghjklmnpqrstvwxyz':\n",
+    "            if consonant in wordSet or consonant.upper() in wordSet:\n",
+    "                consCheck = True\n",
+    "                break\n",
+    "\n",
+    "        return vowelCheck and consCheck\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isValid(\"234Adas\") == True\n",
+    "assert isValid(\"b3\") == False\n",
+    "assert isValid(\"a3$e\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9092445",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2 Medium\n",
+    "def minimumOperationsToMakeKPeriodic(word: str, k: int) -> int:\n",
+    "    N = len(word)\n",
+    "    freq: dict[str, int] = dict()\n",
+    "    max_ = -math.inf\n",
+    "    for i in range(0, N, k):\n",
+    "        curr = word[i: i+k]\n",
+    "        freq[curr] = freq.get(curr, 0) + 1\n",
+    "        max_ = max(max_, freq[curr])\n",
+    "\n",
+    "    return int((N // k) - max_)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumOperationsToMakeKPeriodic(\"leetcodeleet\", k=4) == 1\n",
+    "assert minimumOperationsToMakeKPeriodic(\"leetcoleet\", k=2) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cd63f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3 Medium\n",
+    "def minAnagramLength(s: str) -> int:\n",
+    "\n",
+    "    def checkAnagram(k: int) -> bool:\n",
+    "        \"\"\"\n",
+    "        Divide the string into n slices.\n",
+    "        Check if the freq of first slice matches with all slices\n",
+    "        \"\"\"\n",
+    "        freq = collections.Counter(s[:k])\n",
+    "        for i in range(k, N, k):\n",
+    "            currFreq = collections.Counter(s[i: i+k])\n",
+    "            if freq != currFreq:\n",
+    "                return False\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    N, U = len(s), len(set(s))\n",
+    "    for length in range(U, N):\n",
+    "        if N % length == 0 and checkAnagram(length):\n",
+    "            return length\n",
+    "\n",
+    "    return N\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minAnagramLength(\"abba\") == 2\n",
+    "assert minAnagramLength(\"cdef\") == 4\n",
+    "assert minAnagramLength(\"aabccabacbaacaab\") == 4"
    ]
   }
  ],
