--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -433,6 +433,7 @@
      "iopub.status.idle": "2024-05-04T15:52:04.742719Z",
      "shell.execute_reply": "2024-05-04T15:52:04.741978Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013244,
      "end_time": "2024-05-04T15:52:04.744434",
@@ -455,6 +456,274 @@
     "\n",
     "assert frogJumpOptimal(4, [10,20,30,10]) == 20\n",
     "assert frogJumpOptimal(3, [10,50,10]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fa38d19",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/Kmh3rhyEtB8?si=rqZ5-pJcjIzWU5i8\n",
+    "Frog Jump with K distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f21ca119",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def frogJumpAtKDistBetter1(N: int, K: int, heights: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Memoization Approach: Top Down Approach\n",
+    "    Time: O(N x K), Space: O(N) + O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(curr: int) -> int:\n",
+    "        if curr >= N - 1:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            minCost = math.inf\n",
+    "            for next_ in range(curr + 1, min(N, curr + K + 1)):\n",
+    "                cost = abs(heights[curr] - heights[next_]) + backtrack(next_)\n",
+    "                minCost = min(minCost, cost)\n",
+    "\n",
+    "            return int(minCost)\n",
+    "\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert frogJumpAtKDistBetter1(5, 3, [10,30,40,50,20]) == 30\n",
+    "assert frogJumpAtKDistBetter1(3, 1, [10,20,10]) == 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9a86c0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def frogJumpAtKDistBetter2(N: int, K: int, heights: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Tabulation: Bottom up approach\n",
+    "    Time: O(N x K), Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dp: list[int] = [-1 for i in range(N)]\n",
+    "    dp[-1] = 0\n",
+    "\n",
+    "    for curr in range(N - 2, -1, -1):\n",
+    "        minCost = math.inf\n",
+    "        for next_ in range(curr + 1, min(N, curr + K + 1)):\n",
+    "            cost = abs(heights[curr] - heights[next_]) + dp[next_]\n",
+    "            minCost = min(minCost, cost)\n",
+    "        dp[curr] = int(minCost)\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert frogJumpAtKDistBetter2(5, 3, [10,30,40,50,20]) == 30\n",
+    "assert frogJumpAtKDistBetter2(3, 1, [10,20,10]) == 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09ca5d18",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def frogJumpAtKDist(N: int, K: int, heights: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Tabulation: Bottom up approach\n",
+    "    Time: O(N x K), Space: O(K)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dp: collections.deque[int] = collections.deque([0])\n",
+    "    for curr in range(N - 2, -1, -1):\n",
+    "        minCost = math.inf\n",
+    "        for jump in range(1, min(N - curr, K + 1)):\n",
+    "            next_ = curr + jump\n",
+    "            cost = abs(heights[curr] - heights[next_]) + dp[jump - 1]\n",
+    "            minCost = min(minCost, cost)\n",
+    "\n",
+    "        dp.appendleft(int(minCost))\n",
+    "        if len(dp) > K:\n",
+    "            dp.pop()\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert frogJumpAtKDist(5, 3, [10,30,40,50,20]) == 30\n",
+    "assert frogJumpAtKDist(3, 1, [10,20,10]) == 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259d53f8",
+   "metadata": {},
+   "source": [
+    "Maximum sum of Non Adjacent Elements: House Robber\n",
+    "Video Link: https://youtu.be/GrMBfJNk_NY?si=IPuGJglc0axETveU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89d8dea7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def robMemo(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Memoization: Top down approach\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(curr: int) -> int:\n",
+    "        if curr >= N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return max(backtrack(curr + 1), nums[curr] + backtrack(curr + 2))\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert robMemo([2,7,9,3,1]) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e69063ac",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def robTab(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Tabulation: Bottom up approach\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    dp: list[int] = [-1 for i in range(N + 1)]\n",
+    "    dp[-1], dp[-2] = 0, nums[-1]\n",
+    "    for curr in range(N - 2, -1, -1):\n",
+    "        dp[curr] = max(nums[curr] + dp[curr + 2], dp[curr + 1])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert robTab([2,7,9,3,1]) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ac1b1c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/house-robber/submissions/1249841355/\n",
+    "def robSpaceOptimized(nums: list[int]) -> int:\n",
+    "    \"Time: O(N), Space: O(1)\"\n",
+    "    next1 = next2 = 0\n",
+    "    for curr in range(len(nums) - 1, -1, -1):\n",
+    "        next1, next2 = max(nums[curr] + next2, next1), next1\n",
+    "\n",
+    "    return next1\n",
+    "\n",
+    "assert robSpaceOptimized([2,7,9,3,1]) == 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "630eec21",
+   "metadata": {},
+   "source": [
+    "House Robber 2: https://youtu.be/3WaxQMELSkw?si=i9oGKnDJGJxvUjbu\n",
+    "https://leetcode.com/problems/house-robber-ii/submissions/1249888930"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ee7a5cf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def rob2(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Ans cannot contain both the first and the last house.\n",
+    "    It can contain either the first or the last house.\n",
+    "    \"\"\"\n",
+    "    def rob(arr: list[int]) -> int:\n",
+    "        next1 = next2 = 0\n",
+    "        for curr in range(len(arr) - 1, -1, -1):\n",
+    "            next1, next2 = max(arr[curr] + next2, next1), next1\n",
+    "\n",
+    "        return next1\n",
+    "\n",
+    "    return max(rob(nums[1:]), rob(nums[:-1])) if len(nums) > 1 else sum(nums)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rob2([1,2,3,1]) == 4\n",
+    "assert rob2([]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52745498",
+   "metadata": {},
+   "source": [
+    "Ninja's Training: https://youtu.be/AE39gJYuRog?si=n4BhCotno-9chP5j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c814dc79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ninjaTraining(N: int, points: list[list[int]]) -> int:\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            max_ = -math.inf\n",
+    "            for k in range(3):\n",
+    "                if k != j:\n",
+    "                    max_ = max(max_, points[i][k] + backtrack(i + 1, k))\n",
+    "\n",
+    "            return int(max_)\n",
+    "\n",
+    "    return backtrack(0, -1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert ninjaTraining(3, [[10,40,70], [20,50,80], [30,60,90]]) == 210\n",
+    "assert ninjaTraining(3, [[1,2,5], [3,1,1], [3,3,3]]) == 11\n",
+    "assert ninjaTraining(2, [[10,50,1], [5,100,11]]) == 110"
    ]
   }
  ],
