--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -701,10 +701,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c814dc79",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
-    "def ninjaTraining(N: int, points: list[list[int]]) -> int:\n",
+    "def ninjaTrainingBetter(N: int, points: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    Memoization: Top down approach\n",
+    "\n",
+    "    Time: O(N), Space: O(N) + O(N)\n",
+    "    \"\"\"\n",
     "\n",
     "    @functools.cache\n",
     "    def backtrack(i: int, j: int) -> int:\n",
@@ -721,9 +728,191 @@
     "    return backtrack(0, -1)\n",
     "\n",
     "# Testing the solution\n",
+    "assert ninjaTrainingBetter(3, [[10,40,70], [20,50,80], [30,60,90]]) == 210\n",
+    "assert ninjaTrainingBetter(3, [[1,2,5], [3,1,1], [3,3,3]]) == 11\n",
+    "assert ninjaTrainingBetter(2, [[10,50,1], [5,100,11]]) == 110"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "015e9458",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def ninjaTraining(N: int, points: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    Space optimized Tabulation DP: Bottom up\n",
+    "\n",
+    "    Start at the last day.\n",
+    "    At each day we sum up corresponding values with the values in DP and assign them to DP.\n",
+    "    Before moving the prev day, to the DP perform this op -> dp[i] = max(dp[j]) where j != i\n",
+    "\n",
+    "    At the end of the iteration simply return max of DP.\n",
+    "\n",
+    "    Time: O(N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dp: list[int] = [0, 0, 0]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(3):\n",
+    "            dp[j] += points[i][j]\n",
+    "\n",
+    "        next_dp: list[int] = []\n",
+    "        for j in range(3):\n",
+    "            next_dp.append(max(dp[k] for k in range(3) if k != j))\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return max(dp)\n",
+    "\n",
+    "# Testing the solution\n",
     "assert ninjaTraining(3, [[10,40,70], [20,50,80], [30,60,90]]) == 210\n",
     "assert ninjaTraining(3, [[1,2,5], [3,1,1], [3,3,3]]) == 11\n",
     "assert ninjaTraining(2, [[10,50,1], [5,100,11]]) == 110"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d132fa58",
+   "metadata": {},
+   "source": [
+    "Unique 2D paths: https://youtu.be/sdE0A2Oxofw?si=g1FpuSIYx0x95G-7\n",
+    "https://leetcode.com/problems/unique-paths/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d035c9d7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def uniquePathsMemo(m: int, n: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Memoization Solution: Top Down\n",
+    "    Time: O(m x n), Space: O(m x n) + O(m x n)\n",
+    "    \"\"\"\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i == m - 1 and j == n - 1:\n",
+    "            return 1\n",
+    "        elif i >= m or j >= n:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return backtrack(i + 1, j) + backtrack(i, j + 1)\n",
+    "\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert uniquePathsMemo(3, 7) == 28\n",
+    "assert uniquePathsMemo(3, 2) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3fb756d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/unique-paths/submissions/1250526713\n",
+    "def uniquePathsTab(m: int, n: int) -> int:\n",
+    "    \"Time: O(m x n), Space: O(min(m, n))\"\n",
+    "    M, N = min(m, n), max(m, n)\n",
+    "    dp: list[int] = [1 for i in range(M)]\n",
+    "\n",
+    "    for i in range(N - 1):\n",
+    "        for j in range(M - 2, -1, -1):\n",
+    "            dp[j] += dp[j + 1]\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert uniquePathsTab(3, 7) == 28\n",
+    "assert uniquePathsTab(3, 2) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb22f54a",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/TmhpgXScLyY?si=M_FfFKRqRTXid4Jj\n",
+    "Unique Paths - ii: https://leetcode.com/problems/unique-paths-ii/submissions/1250615914"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f59a530c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def uniquePathsWithObstacles(obstacleGrid: list[list[int]]) -> int:\n",
+    "    \"Time: O(M x N), Space: O(N)\"\n",
+    "    M, N = len(obstacleGrid), len(obstacleGrid[0])\n",
+    "\n",
+    "    dp: list[int] = [0 for j in range(N)]\n",
+    "    dp[-1] = 1\n",
+    "\n",
+    "    for i in range(M - 1, -1, -1):\n",
+    "        for j in range(N - 1, -1, -1):\n",
+    "            if obstacleGrid[i][j] == 0:\n",
+    "                dp[j] = dp[j] + dp[j + 1] if j < N - 1 else dp[j]\n",
+    "            else:\n",
+    "                dp[j] = 0\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert uniquePathsWithObstacles([[0,0,0],[0,1,0],[0,0,0]]) == 2\n",
+    "assert uniquePathsWithObstacles([[0,1],[0,0]]) == 1\n",
+    "assert uniquePathsWithObstacles([[1]]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93e28e9b",
+   "metadata": {},
+   "source": [
+    "Minimum Path Sum: https://youtu.be/_rgTlyky1uQ?si=3xJY7MmVg5tTEW5Q\n",
+    "https://leetcode.com/problems/minimum-path-sum/submissions/1250633614"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c97f7ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minPathSum(grid: list[list[int]]) -> int:\n",
+    "    \"Time: O(M x N), Space: O(N)\"\n",
+    "    M, N = len(grid), len(grid[0])\n",
+    "\n",
+    "    # Initialize DP\n",
+    "    dp: list[float] = [math.inf for j in range(N)]\n",
+    "    dp[-1] = 0\n",
+    "\n",
+    "    # DP Solution\n",
+    "    for i in range(M - 1, -1, -1):\n",
+    "        for j in range(N - 1, -1, -1):\n",
+    "            dp[j] = grid[i][j] + (min(dp[j + 1], dp[j]) if j < N - 1 else dp[j])\n",
+    "\n",
+    "    return int(dp[0])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minPathSum([[1,3,1],[1,5,1],[4,2,1]]) == 7\n",
+    "assert minPathSum([[1,2,3],[4,5,6]]) == 12"
    ]
   }
  ],
