--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -1130,6 +1130,7 @@
      "iopub.status.idle": "2024-05-07T05:28:04.629970Z",
      "shell.execute_reply": "2024-05-07T05:28:04.629423Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011232,
      "end_time": "2024-05-07T05:28:04.631109",
@@ -1159,6 +1160,41 @@
     "# Testing the solution\n",
     "assert minPathSum([[1,3,1],[1,5,1],[4,2,1]]) == 7\n",
     "assert minPathSum([[1,2,3],[4,5,6]]) == 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "107526ff",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/0bHoB32fuj0?si=5UHeArKmLvTVpbrk\n",
+    "Triangle: https://leetcode.com/problems/triangle/submissions/1251774955/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62387041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimumTotal(triangle: list[list[int]]) -> int:\n",
+    "    \"\"\"Time: O(N x N), Space: O(N)\"\"\"\n",
+    "    N = len(triangle)\n",
+    "    dp: list[int] = [0 for i in range(N + 1)]\n",
+    "\n",
+    "    while N > 0:\n",
+    "        next_: list[int] = []\n",
+    "        for i in range(N):\n",
+    "            next_.append(min(dp[i], dp[i + 1]) + triangle[N - 1][i])\n",
+    "        dp = next_\n",
+    "        N -= 1\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumTotal([[2],[3,4],[6,5,7],[4,1,8,3]]) == 11\n",
+    "assert minimumTotal([[-10]]) == -10"
    ]
   }
  ],
