--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1724,7 +1724,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f6cd63f0",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "# Q3 Medium\n",
@@ -1754,6 +1756,50 @@
     "assert minAnagramLength(\"abba\") == 2\n",
     "assert minAnagramLength(\"cdef\") == 4\n",
     "assert minAnagramLength(\"aabccabacbaacaab\") == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa993f2d",
+   "metadata": {},
+   "source": [
+    "LC Easy: https://leetcode.com/problems/relative-ranks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2087828d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/relative-ranks/submissions/1252885244/\n",
+    "def findRelativeRanks(score: list[int]) -> list[str]:\n",
+    "    maxHeap: list[int] = list(score)\n",
+    "    heapq._heapify_max(maxHeap)\n",
+    "\n",
+    "    awards: dict[int, str] = dict()\n",
+    "    pos: int = 0\n",
+    "    while maxHeap:\n",
+    "        pos += 1\n",
+    "        curr = heapq._heappop_max(maxHeap)\n",
+    "        if pos == 1:\n",
+    "            awards[curr] = \"Gold Medal\"\n",
+    "        elif pos == 2:\n",
+    "            awards[curr] = \"Silver Medal\"\n",
+    "        elif pos == 3:\n",
+    "            awards[curr] = \"Bronze Medal\"\n",
+    "        else:\n",
+    "            awards[curr] = str(pos)\n",
+    "\n",
+    "    result: list[str] = []\n",
+    "    for s in score:\n",
+    "        result.append(awards[s])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findRelativeRanks([10,3,8,9,4]) == [\"Gold Medal\",\"5\",\"Bronze Medal\",\"Silver Medal\",\"4\"]"
    ]
   }
  ],
